adding endpoints